client/src/App.css
body {
  margin: 0;
  padding: 0;
  font-family: Arial, sans-serif;
  background-color: #121212;
  color: #ffffff;
}

.app-container {
  display: flex;
  height: 100vh;
  width: 100%;
  overflow: hidden;
}

.sidebar {
  width: 25%;
  background-color: #1e1e1e;
  color: #ffffff;
  display: flex;
  flex-direction: column;
  padding: 20px;
  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
}

.sidebar h1 {
  font-size: 1.5em;
  margin-bottom: 15px;
  text-align: center;
  border-bottom: 1px solid #444;
  padding-bottom: 10px;
}

.sidebar ul {
  list-style: none;
  padding: 0;
}

.sidebar li {
  padding: 10px;
  margin-bottom: 10px;
  background-color: #333;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.sidebar li:hover {
  background-color: #555;
}

.main-content {
  flex: 1;
  display: flex;
  flex-direction: column;
  background-color: #121212;
}

.chat-window {
  flex: 1;
  padding: 20px;
  display: flex;
  flex-direction: column;
  overflow-y: auto;
}

.messages {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 10px; 
}

.message {
  max-width: 60%;
  margin-bottom: 10px;
  padding: 15px;
  border-radius: 10px;
  font-size: 0.9em;
  align-self: flex-start; /* Alignement par défaut à gauche */
}

.message.sent {
  align-self: flex-end; /* Messages de l'utilisateur alignés à droite */
  background-color: #333; /* Couleur spécifique */
}

.message.received {
  background-color: #444; /* Couleur différente pour les messages reçus */
}


.command-input {
  display: flex;
  padding: 20px;
  background-color: #1e1e1e;
  border-top: 1px solid #333;
}

.command-input input {
  flex: 1;
  padding: 10px;
  border: none;
  border-radius: 5px;
  background-color: #333;
  color: #ffffff;
  font-size: 1em;
}

.command-input button {
  margin-left: 10px;
  padding: 10px 20px;
  background-color: #6200ea;
  border: none;
  border-radius: 5px;
  color: #fff;
  font-size: 1em;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.command-input button:hover {
  background-color: #8338ec;
}

@media (max-width: 1024px) {
  .sidebar {
    width: 30%;
  }

  .chat-window {
    padding: 10px;
  }

  .command-input {
    padding: 10px;
  }
}

@media (max-width: 768px) {
  .sidebar {
    width: 40%;
  }

  .message {
    max-width: 80%;
  }
}

